--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0c2343;
+  background-color: #060e23;
   color: #efdede;
 }
 
